[gd_scene load_steps=33 format=3 uid="uid://dlonrc4tpo6hx"]

[ext_resource type="Texture2D" uid="uid://bd5kbqqbou42i" path="res://assets/Backgound/level2_scene.png" id="1_gscd8"]
[ext_resource type="Script" uid="uid://bhnpfu0iryrni" path="res://maps/variabel/logic/level2.gd" id="1_xmh2i"]
[ext_resource type="Texture2D" uid="uid://5yk4bllahhph" path="res://assets/Button/maps/run.png" id="2_tctrj"]
[ext_resource type="Texture2D" uid="uid://cqqa07t1lte16" path="res://assets/Button/maps/back_map.png" id="3_mawu8"]
[ext_resource type="Texture2D" uid="uid://c87v032h6thhx" path="res://assets/Button/maps/petunjuk_map.png" id="4_hcdyu"]
[ext_resource type="Texture2D" uid="uid://dho2ihxnledh6" path="res://assets/player.png" id="7_bu4rt"]
[ext_resource type="Texture2D" uid="uid://1dglhky1k5vh" path="res://assets/Other/papan_next_level.png" id="7_dhwdt"]
[ext_resource type="Texture2D" uid="uid://luw6laahs8om" path="res://assets/Button/maps/lanjut.png" id="8_iv1mp"]
[ext_resource type="Texture2D" uid="uid://d3gn5muckqffd" path="res://assets/Button/maps/ulang.png" id="9_q5fjr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_elquc"]
atlas = ExtResource("7_bu4rt")
region = Rect2(803, 258, 73, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x3so"]
atlas = ExtResource("7_bu4rt")
region = Rect2(949, 258, 73, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e46u"]
atlas = ExtResource("7_bu4rt")
region = Rect2(949, 344, 73, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwcrg"]
atlas = ExtResource("7_bu4rt")
region = Rect2(803, 344, 73, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbtm2"]
atlas = ExtResource("7_bu4rt")
region = Rect2(876, 344, 73, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmw0x"]
atlas = ExtResource("7_bu4rt")
region = Rect2(1020, 425, 85, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_07t30"]
atlas = ExtResource("7_bu4rt")
region = Rect2(1020, 340, 85, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_dabxs"]
atlas = ExtResource("7_bu4rt")
region = Rect2(1020, 255, 85, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkd80"]
atlas = ExtResource("7_bu4rt")
region = Rect2(869, 602, 79, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_b20xn"]
atlas = ExtResource("7_bu4rt")
region = Rect2(948, 602, 79, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_b03pn"]
atlas = ExtResource("7_bu4rt")
region = Rect2(790, 602, 79, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_owjsh"]
atlas = ExtResource("7_bu4rt")
region = Rect2(790, 688, 79, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kcg0"]
atlas = ExtResource("7_bu4rt")
region = Rect2(948, 688, 79, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvl6k"]
atlas = ExtResource("7_bu4rt")
region = Rect2(869, 688, 79, 86)

[sub_resource type="SpriteFrames" id="SpriteFrames_dhwdt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_elquc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x3so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e46u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwcrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbtm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e46u")
}],
"loop": true,
"name": &"diam",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmw0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07t30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dabxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dabxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07t30")
}],
"loop": true,
"name": &"jalan_atas",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_elquc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x3so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e46u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbtm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwcrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e46u")
}],
"loop": false,
"name": &"jalan_bawah",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkd80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b20xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b03pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owjsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kcg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvl6k")
}],
"loop": true,
"name": &"jalan_kanan",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkd80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b20xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b03pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owjsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kcg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvl6k")
}],
"loop": true,
"name": &"jalan_kiri",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iv1mp"]
radius = 6.0
height = 12.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0dbi1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bu4rt"]
size = Vector2(17, 511)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dhwdt"]
size = Vector2(693, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iv1mp"]
size = Vector2(24, 363)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5fjr"]
size = Vector2(552, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4i5kt"]
size = Vector2(53, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwyps"]
size = Vector2(65, 38)

[node name="Level2" type="Node2D"]
script = ExtResource("1_xmh2i")

[node name="map" type="Sprite2D" parent="."]
position = Vector2(480, 265)
texture = ExtResource("1_gscd8")

[node name="run" type="Button" parent="map"]
offset_left = 242.0
offset_top = 132.0
offset_right = 450.0
offset_bottom = 180.0
pivot_offset = Vector2(104, 24)
focus_mode = 0
icon = ExtResource("2_tctrj")
flat = true

[node name="back" type="Button" parent="map"]
offset_left = 290.0
offset_top = 195.0
offset_right = 398.0
offset_bottom = 223.0
pivot_offset = Vector2(54, 14)
focus_mode = 0
icon = ExtResource("3_mawu8")
flat = true

[node name="tips" type="Button" parent="map"]
offset_left = 290.0
offset_top = 225.0
offset_right = 398.0
offset_bottom = 253.0
pivot_offset = Vector2(54, 14)
focus_mode = 0
icon = ExtResource("4_hcdyu")
flat = true

[node name="karakter" type="CharacterBody2D" parent="map"]
position = Vector2(-707, 31)
scale = Vector2(1.5, 1.5)

[node name="karaktermap2" type="AnimatedSprite2D" parent="map/karakter"]
z_as_relative = false
texture_filter = 1
position = Vector2(170, -106)
scale = Vector2(0.5388127, 0.72093016)
sprite_frames = SubResource("SpriteFrames_dhwdt")
animation = &"diam"
autoplay = "diam"
speed_scale = 1.75
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/karakter"]
position = Vector2(183.33333, -49.999992)
shape = SubResource("CapsuleShape2D_iv1mp")

[node name="StaticBody2D" type="StaticBody2D" parent="map"]
physics_material_override = SubResource("PhysicsMaterial_0dbi1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(220, -1.5)
shape = SubResource("RectangleShape2D_bu4rt")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-468, 1)
shape = SubResource("RectangleShape2D_bu4rt")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-120.5, -185)
shape = SubResource("RectangleShape2D_dhwdt")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-120.5, 255)
shape = SubResource("RectangleShape2D_dhwdt")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(139, 3.5)
shape = SubResource("RectangleShape2D_iv1mp")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-392, 3.5)
shape = SubResource("RectangleShape2D_iv1mp")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-127, 195)
shape = SubResource("RectangleShape2D_q5fjr")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-431.5, -92)
shape = SubResource("RectangleShape2D_4i5kt")

[node name="TextEdit" type="TextEdit" parent="map"]
texture_filter = 1
offset_left = 236.0
offset_top = -245.0
offset_right = 458.0
offset_bottom = 109.0
pivot_offset = Vector2(111, 155)
theme_override_font_sizes/font_size = 12

[node name="FinishArea" type="Area2D" parent="map"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/FinishArea"]
position = Vector2(182, -140)
shape = SubResource("RectangleShape2D_dwyps")

[node name="UI_Finish" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="UI_Finish"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.5
offset_top = -175.0
offset_right = 262.5
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_dhwdt")
metadata/_edit_use_anchors_ = true

[node name="TombolLanjut" type="Button" parent="UI_Finish/TextureRect"]
layout_mode = 0
offset_left = 275.0
offset_top = 275.0
offset_right = 458.0
offset_bottom = 318.0
pivot_offset = Vector2(91.5, 21.5)
focus_mode = 0
icon = ExtResource("8_iv1mp")
flat = true

[node name="TombolUlangi" type="Button" parent="UI_Finish/TextureRect"]
layout_mode = 0
offset_left = 65.0
offset_top = 275.0
offset_right = 248.0
offset_bottom = 318.0
pivot_offset = Vector2(91.5, 21.5)
focus_mode = 0
icon = ExtResource("9_q5fjr")
flat = true
